2003-04-10  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* documentation/manpages/fvwm.php: 
	Example page.
	* layout_default.inc:
	Fixed window size problem.
	* logo_competition/index.php
	Formating changes. Added end tags.

2003-04-09  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* layout_default.inc: 
	Added entry about last modified date. This entry is taken form the
	timestamp of the requested file.

	* latest_news/news_template.php_: 
	Added child entry to logo_competition

	* navgen.php: 
	navgen reports now if a parent's child reference and child's
	parent reference do not match.
	Changed some warning and error messages.

2003-04-09  Mikhael Goikhman  <migo@homemail.com>

	* **:
	small fixes and consistency changes

	* logo-competition/index.php:
	* logo-competition/rules.php:
	added new pages, currently under "News"

2003-04-08  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* **: 
	Added author information site and cvs information site
	
2003-04-07  Dan Espen  <dane@mk.telcordia.com>

	* layout_default.inc: Add favicon to php page.

2003-04-03  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* screenshots/index.php: 
	fixed "decor" child entry 
	* screenshots/desktops.php: 
	removed "test" child site
	* features.php: 
	removed <hr> tags
	* layout_default.inc
	added "#top" link target
	added stylesheet definitions for h2 and h4
	* latest_news/news2html.awk
	new script to convert NEWS file to html
	* latest_news/news.php
	generated from latest cvs version

2003-04-02  Bob Woodside  <dumbledore@woodsway.com>

	* layout_default.inc:
	Lightened up the Pager background a little.
	* links.php:
	Merged content from the old Links page into the new PHP
        version, updated/dropped broken links, minor wording changes
        and list rearrangement.

2003-03-31  Mikhael Goikhman  <migo@homemail.com>

	* **:
	some file name rearrangements, small fixes and consistency changes

2003-03-31  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* **: